# Self-Taught_PhD

./: .gitignore  README.md  main.py
CodingPractice/LeetCode/: 1.two-sum.py  11.container-with-most-water.py  121.best-time-to-buy-and-sell-stock.py  125.valid-palindrome.py  128.longest-consecutive-sequence.py  13.roman-to-integer.py  15.3-sum.py  150.evaluate-reverse-polish-notation.py  153.find-minimum-in-rotated-sorted-array.py  155.min-stack.py  167.two-sum-ii-input-array-is-sorted.py  20.valid-parentheses.py  217.contains-duplicate.py  22.generate-parentheses.py  242.valid-anagram.py  3.longest-substring-without-repeating-characters.py  33.search-in-rotated-sorted-array.py  347.top-k-frequent-elements.py  36.valid-sudoku.py  4.median-of-two-sorted-arrays.py  42.trapping-rain-water.py  49.group-anagrams.py  5.longest-palindromic-substring.py  535.encode-and-decode-tiny-url.py  704.binary-search.py  739.daily-temperatures.py  74.search-a-2-d-matrix.py  853.car-fleet.py  875.koko-eating-bananas.py  905.sort-array-by-parity.py  941.valid-mountain-array.py  981.time-based-key-value-store.py  AddTwoNumber.py  CheckIfExist.py  Count_bits.py  DuplicateZeros.py  Find_number_with_even_number_of_digits.py  HappyNumber.cpp  HappyNumber_0ms.cpp  MaxConsecutiveOnes.py  (+23 more)
CodingPractice/PythonChallenge.com/: L0.py  (+1 more)
CodingPractice/yaml-cpp_parser/test_yaml_emitter/: CMakeLists.txt  emit2File.cpp  sample.yaml
ComputerVision/: Pointcloud2FV.py  StereoMatching.py
MachineLearning/: README.md
Mathematics/: README.md
Misc/: .bash_aliases  .bashrc
ParallelComputing/: README.md
(+40 files in other folders)
